Important build.gradle update